Fix pointer events leaking out on mobile sidebar

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -307,6 +307,7 @@
     height:calc(100dvh - 32px);
     margin-top:16px;
     margin-left:16px;
+    pointer-events:auto;
   }
   #sidebar-content{
     position:absolute;
